fixed text align

--- a/src/components/pages/Applications/Applications.module.css
+++ b/src/components/pages/Applications/Applications.module.css
@@ -13,4 +13,5 @@
 
 .title{
     color: #707070;
+    text-align: center;
 }
